--- a/package.json
+++ b/package.json
@@ -28,5 +28,13 @@
     "tailwind-scrollbar": "3.0.0",
     "tailwindcss": "3.3.2",
     "vite": "4.3.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "lucide-react": "0.468.0",
+      "openai": "4.0.0",
+      "react": "18.2.0",
+      "react-dom": "18.2.0"
+    }
   }
 }
